--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,9 @@
 .header {
   display: flex;
-  align-items: center;
+  padding: 20px;
   justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
 }
 
 .logoImg {
@@ -13,8 +15,4 @@
   display: flex;
   align-items: center;
   gap: 30px;
-}
-
-.nav li a {
-  text-decoration: none;
 }
