--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,5 @@
+@import "../../index.css";
+
 .header {
   display: flex;
   padding: 20px;
@@ -15,4 +17,23 @@
   display: flex;
   align-items: center;
   gap: 30px;
+}
+
+.nav li a {
+  font-size: 16px;
+}
+
+.nav li a:hover {
+  color: var(--primary-gold);
+}
+
+.icons img {
+  padding: 0 15px 0 15px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+}
+
+.icons img:hover {
+  cursor: pointer;
 }
