--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,3 +1,35 @@
+@import "../../index.css";
+
 .footer {
   display: flex;
+  padding: 40px 80px;
+  align-items: flex-start;
+  gap: 80px;
+  align-self: stretch;
+}
+
+.footer p {
+  font-size: 16px;
+  color: var(--secondary-gray);
+}
+
+.footerLinks {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.social img {
+  margin-right: 1.5em;
+}
+
+.footerMenu h1 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.footerMenu p {
+  margin: 12px;
 }
