form switch made

--- a/src/Pages/Home/DriverForm/DriverForm.module.css
+++ b/src/Pages/Home/DriverForm/DriverForm.module.css
@@ -38,3 +38,10 @@
 .formBody .TextField {
   margin: 1em;
 }
+
+.ownCar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1em;
+}
