--- a/src/Pages/Home/DriverForm/DriverForm.module.css
+++ b/src/Pages/Home/DriverForm/DriverForm.module.css
@@ -1,5 +1,11 @@
 @import "../../../index.css";
 
+.myRide {
+  background-color: #2c2c2c;
+  padding: 1rem;
+  border-radius: 1%;
+}
+
 .formHeader {
   display: flex;
   gap: 2em;
