finished dynamic names on success form

--- a/src/Pages/Home/DriverForm/DriverForm.module.css
+++ b/src/Pages/Home/DriverForm/DriverForm.module.css
@@ -48,6 +48,11 @@
   margin: 1em;
 }
 
+.formSelect {
+  margin: 1rem;
+  display: inline-block;
+}
+
 .ownCar {
   display: flex;
   align-items: center;
