--- a/src/Pages/Home/SuccessForm/SuccessForm.module.css
+++ b/src/Pages/Home/SuccessForm/SuccessForm.module.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
+  background-color: var(--secondary-background);
+  border-radius: 1%;
 }
 
 .successForm h1 {
@@ -37,7 +39,6 @@
 }
 
 .successName {
-  color: var(--primary-gold);
   display: inline-block;
 }
 
